[package]
name = "basic_tcp_proxy"
description = "Simple synchronous TCP proxy crate for forwarding TCP connections"
version = "0.3.1"
authors = ["James McMurray <jamesmcm03@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/jamesmcm/basic_tcp_proxy"
homepage = "https://github.com/jamesmcm/basic_tcp_proxy"
keywords = ["tcp", "proxy", "forward", "port"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
